script/k8s/provider/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: subnet-provider
  labels:
    name: subnet-provider
    app: subnet-provider
